# yaho-klee

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  tfhe_initial_boiler_plate.rs
cmake/: find_json.cmake
lib/Expr/: ExprBuilder.cpp  Parser.cpp
tools/: CMakeLists.txt
tools/analyse-libvig-call-paths/: analyse-libvig-call-paths.cpp
tools/bdd-emulator/: CMakeLists.txt  bdd-emulator.h  main.cpp
tools/bdd-emulator/emulator/: reporter.cpp  reporter.h
tools/bdd-emulator/emulator/internals/: byte.h
tools/bdd-emulator/emulator/operations/: operations.h  packet_borrow_next_secret.h
tools/bdd-reorderer/: CMakeLists.txt  bdd-reorderer.cpp  main.cpp
tools/bdd-to-c/: CMakeLists.txt  ast.cpp  ast.h  bdd-to-c.cpp  main.cpp  nodes.cpp  nodes.h
tools/bdd-to-c/boilerplates/: bdd-analyzer.template.cpp  bdd-node-hit-rate.cpp  callpath-hit-rate.c  sequential.c  sequential.template.cpp
tools/bdd-visualizer/: CMakeLists.txt  bdd-analyzer-report.cpp  bdd-analyzer-report.h  bdd-visualizer.h  main.cpp
tools/bdd-visualizer/generators/: base-graphviz.h  generators.h  hit-rate.h
tools/call-paths-to-bdd/: CMakeLists.txt  call-paths-to-bdd.h  main.cpp  symbex.h
tools/call-paths-to-bdd/bdd/: bdd.cpp  bdd.h  symbol-factory.cpp  symbol-factory.h
tools/call-paths-to-bdd/bdd/nodes/: call.h  node.cpp  node.h
tools/check-call-path-compatibility/: CMakeLists.txt
tools/packet-modification-detector/: packet-modification-detector.cpp
tools/synapse/: CMakeLists.txt  code_generator.cpp  code_generator.h  search.h  synapse.cpp  tfhe_generate_code.cpp  tfhe_generate_code.h
tools/synapse/execution_plan/: execution_plan.cpp  execution_plan.h  execution_plan_node.cpp  execution_plan_node.h  target.h
tools/synapse/execution_plan/modules/: module.cpp  module.h  modules.h
tools/synapse/execution_plan/modules/bmv2/: drop.h  ethernet_consume.h  ethernet_modify.h  forward.h  ip_options_consume.h  ip_options_modify.h  ipv4_consume.h  ipv4_modify.h  send_to_controller.h  setup_expiration_notifications.h  table_lookup.h  tcpudp_consume.h  tcpudp_modify.h
tools/synapse/execution_plan/modules/tfhe/: aided_univariate_pbs.h  bivariate_pbs.h  broadcast.h  change.h  cht_find_backend.h  conditional.h  current_time.h  dchain_allocate_new_index.h  dchain_free_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  drop.h  else.h  expire_items_single_map.h  expire_items_single_map_iteratively.h  forward.h  hash_obj.h  if.h  load_balanced_flow_hash.h  map_erase.h  map_get.h  map_put.h  memory_bank.h  mono_pbs.h  nf_set_rte_ipv4_udptcp_checksum.h  no_change.h  no_op_packet_return_chunk.h  operation.h  packet_borrow_next_chunk.h  packet_borrow_next_secret.h  packet_get_unread_length.h  packet_return_chunk.h  rte_ether_addr_hash.h  single_pbs.h  sketch_compute_hashes.h  sketch_expire.h  sketch_fetch.h  sketch_refresh.h  sketch_touch_buckets.h  ternary_sum.h  (+7 more)
tools/synapse/execution_plan/modules/tfhe/data_structures/: cht.h  data_structure.h  dchain.h  map.h  sketch.h  vector.h
tools/synapse/execution_plan/modules/tofino/: counter_increment.h  counter_read.h  drop.h  forward.h  hash_obj.h  int_allocator_allocate.h  int_allocator_query.h  ipv4_tcpudp_checksums_update.h  modify_custom_header.h  parse_custom_header.h  parser_condition.h  send_to_controller.h  table_is_allocated.h  table_lookup.h  tofino_module.cpp
tools/synapse/execution_plan/modules/x86/: broadcast.h  cht_find_backend.h  current_time.h  dchain_allocate_new_index.h  dchain_free_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  drop.h  expire_items_single_map.h  expire_items_single_map_iteratively.h  forward.h  hash_obj.h  load_balanced_flow_hash.h  map_erase.h  map_get.h  map_put.h  nf_set_rte_ipv4_udptcp_checksum.h  packet_borrow_next_chunk.h  packet_get_unread_length.h  packet_return_chunk.h  rte_ether_addr_hash.h  sketch_compute_hashes.h  sketch_expire.h  sketch_fetch.h  sketch_refresh.h  sketch_touch_buckets.h  vector_borrow.h  vector_return.h
tools/synapse/execution_plan/modules/x86_bmv2/: broadcast.h  current_time.h  dchain_allocate_new_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  drop.h  expire_items_single_map.h  forward.h  map_get.h  map_put.h  nf_set_rte_ipv4_udptcp_checksum.h  packet_borrow_next_chunk.h  packet_get_unread_length.h  packet_return_chunk.h  rte_ether_addr_hash.h  vector_borrow.h  vector_return.h
tools/synapse/execution_plan/modules/x86_tofino/: dchain_allocate_new_index.h  dchain_free_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  drop.h  ether_addr_hash.h  forward_through_tofino.h  hash_obj.h  map_erase.h  map_get.h  map_put.h  packet_modify_checksums.h  packet_modify_ethernet.h  packet_modify_ipv4.h  packet_modify_ipv4_options.h  packet_modify_tcp.h  packet_modify_tcpudp.h  packet_modify_udp.h  packet_parse_ethernet.h  packet_parse_ipv4.h  packet_parse_ipv4_options.h  packet_parse_tcp.h  packet_parse_tcpudp.h  packet_parse_udp.h
tools/synapse/execution_plan/visitors/: visitor.h
tools/synapse/execution_plan/visitors/graphviz/: graphviz.cpp  graphviz.h
tools/synapse/execution_plan/visitors/synthesizers/: synthesizer.h  synthesizers.h
tools/synapse/execution_plan/visitors/synthesizers/tfhe/: boilerplate.c  constants.h  tfhe_generator.cpp  tfhe_generator.h  transpiler.cpp  transpiler.h
tools/synapse/execution_plan/visitors/synthesizers/tfhe/domain/: byte_array.h  stack.h  static_byte_array.h  variable.h
tools/synapse/heuristics/: heuristics.h  score.cpp  score.h  tfhe_most_abstracted.h
